<resources>
    <string name="app_name">Supervisor</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="confirm_pass_field">Confirm Password</string>
    <string name="name_field">Name</string>
    <string name="phone_field">Phone</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_string">If you don\'t have an account Sign in</string>
    <string name="main_title">Duty Manager Check List</string>
    <string name="title_one">Food Duty Manager</string>
    <string name="title_two">Non Food Duty Manager</string>
    <string name="title_three">Food Duty Semi Manager</string>
    <string name="second_title">Cleaning Remarks Noon</string>
    <string name="present_lunch">Present Lunch Time</string>
    <string name="present_Evening">Present Evening</string>
    <string name="checkout_area">Checkout Area</string>
    <string name="food_area">Food Area</string>
    <string name="non_food_area">Non Food Area</string>
    <string name="Pres_cleaning_sup">Presence of Cleaning Supervisor</string>
    <string name="numb_cleaning_staff">Number of Cleaning Staff</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="input_type">
        <item>EditText</item>
        <item>RadioButton</item>
        <item>Switch</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
