<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="128dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_field"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:src="@drawable/teaser"/>

</LinearLayout>